# shockwave_playground

./: .gitignore  CMakeLists.txt  MASTER_PROMPT.md  README.md  configuration.yam
.claude/: settings.local.json
docs/: architecture.md  design_history.md  requirements.md  tutorials.md  verification_plan.md
include/splay/: config.hpp  dg_av.hpp  dg_basis.hpp  dg_residual.hpp  dg_state.hpp  diagnostics.hpp  gas.hpp  io.hpp  mesh.hpp  mpi_decomp.hpp  reconstruction.hpp  reconstruction_ppm_pele.hpp  residual.hpp  riemann.hpp  rk.hpp  state.hpp  transport.hpp  transport_coeffs.hpp  viscous_flux.hpp
scripts/: plot_profile.py
src/: config.cpp  dg_av.cpp  dg_residual.cpp  dg_state.cpp  diagnostics.cpp  gas.cpp  io.cpp  main.cpp  mesh.cpp  mpi_decomp.cpp  reconstruction.cpp  reconstruction_ppm_pele.cpp  residual.cpp  riemann.cpp  rk.cpp  state.cpp  transport.cpp  viscous_flux.cpp
tests/: test_dg.cpp  test_gas.cpp  test_mpi_decomp.cpp  test_normal_shock.cpp  test_restart.cpp  test_sod.cpp  test_sod_regression.py  test_transport.cpp
tools/: generate_transport_fits.py
tutorials/argon_target_shock/: .gitignore  MD_data.txt  README.md  argon_shock_central_navier_stokes.yml  argon_shock_muscl_euler.yml  argon_shock_muscl_euler_quick.yml  argon_shock_muscl_navier_stokes.yml  argon_shock_ppm_euler.yml  argon_shock_ppm_euler_quick.yml  argon_shock_ppm_navier_stokes.yml  plot_compare.py  plot_flatten.py  plot_quick.py  plot_resolved.py  run_flatten.sh  run_mpi.sh  run_serial.sh
tutorials/argon_target_shock/DG/: Temperature_0800.npy  x_0800.npy
tutorials/argon_target_shock/PELEC/: T_K.npy  p_Pa.npy  rho_kgm3.npy  u_ms.npy  x_m.npy  x_rel_um.npy
tutorials/argon_target_shock/coarse/: argon_shock_dg_p2_n1000_quick.yml  argon_shock_dg_p2_n500_quick.yml  argon_shock_dg_p2_n800_quick.yml  argon_shock_muscl_euler_flatten_quick.yml  argon_shock_muscl_euler_quick.yml  argon_shock_muscl_ns_flatten_quick.yml  argon_shock_muscl_ns_quick.yml  argon_shock_ppm_euler_flatten_quick.yml  argon_shock_ppm_euler_quick.yml  argon_shock_ppm_ns_flatten_quick.yml  argon_shock_ppm_ns_quick.yml  run.sh
tutorials/argon_target_shock/convergence/: argon_shock_dg_p2_n100_conv.yml  argon_shock_dg_p2_n200_conv.yml  argon_shock_dg_p2_n400_conv.yml  argon_shock_dg_p2_n800_conv.yml  argon_shock_ppm_ns_n100_Lx10.yml  argon_shock_ppm_ns_n100_Lx100.yml  argon_shock_ppm_ns_n100_Lx1000.yml  argon_shock_ppm_ns_n100_Lx10000.yml  argon_shock_ppm_ns_n100_conv.yml  argon_shock_ppm_ns_n1600_conv.yml  argon_shock_ppm_ns_n200_conv.yml  argon_shock_ppm_ns_n3200_conv.yml  argon_shock_ppm_ns_n400_conv.yml  argon_shock_ppm_ns_n800_conv.yml  plot_by_cell.py  plot_ppm_ns_L_study.py  plot_ppm_ns_convergence.py
tutorials/argon_target_shock/fine/: argon_shock_central_navier_stokes.yml  argon_shock_muscl_euler.yml  argon_shock_muscl_euler_flatten.yml  argon_shock_muscl_navier_stokes.yml  argon_shock_muscl_navier_stokes_flatten.yml  argon_shock_ppm_euler.yml  argon_shock_ppm_euler_flatten.yml  argon_shock_ppm_navier_stokes.yml  argon_shock_ppm_navier_stokes_flatten.yml  argon_shock_ppm_navier_stokes_flatten_split.yml  argon_shock_ppm_pele_navier_stokes.yml  run.sh
tutorials/basic_tests/: README.md  constant_state.yml  contact_discontinuity.yml  plot.py  pressure_perturbation.yml  run.sh
tutorials/sod_argon/: README.md  argon_sod.yml  plot_sod.py  run.sh
tutorials/sod_nitrogen/: README.md  nitrogen_sod.yml  plot_sod.py  run.sh
